# Fpga-zk

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
daemon/: Cargo.toml
daemon/src/: main.rs
solana-program/: Cargo.toml
solana-program/src/: lib.rs
src/: hw_accel.rs  lib.rs  msm.rs  pippenger.rs
src/groth16/: circuit.rs  mod.rs  prover.rs  setup.rs
tests/: daemon_integration.rs  groth16_integration.rs  hw_verification.rs  integration.rs  validator_test.rs
