[package]
name = "fpga-zk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-snark = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"

[[bin]]
name = "fpga-zk-daemon"
path = "daemon/src/main.rs"

[[bin]]
name = "groth16_setup"
path = "bin/groth16_setup.rs"

[dev-dependencies]
criterion = "0.5"
solana-client = "1.16"
solana-sdk = "1.16"
solana-transaction-status = "1.16"
borsh = "0.10"
tempfile = "3.8"
