[package]
name = "fpga-zk-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
fpga-zk = { path = ".." }
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
rand = "0.8"
